feat(phase 1): implement networking infrastructure